[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
url = "2.5.4"