[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
yew = { version = "0.21.0", features = ["csr"] }
web-sys = { version = "0.3", features = ["Blob", "FileReader", "Url"] }
serde_json = "1.0.134"
js-sys = "0.3"
wasm-bindgen = "0.2.99"
